[package]
name = "haxial"
version = "0.1.0"
edition = "2024"
description = "Common Haxial KDX functionality"

[dependencies]
bytemuck = "1.22.0"
bytes = "1.10.1"
chrono = "0.4.40"
#crc32fast = "1.4.2"
generic-array = "1.2.0"
md-5 = "0.10.6"
murmur3 = "0.5.2"
parking_lot = "0.12.3"
tokio = { version = "1.44.2", features = ["net", "parking_lot"] }
#twofish = "0.7.1"
