[package]
name = "kdxserver"
version = "0.1.0"
edition = "2024"

[dependencies]
haxial = { path = "../haxial" }
bitflags = "2.9.0"
bytemuck = "1.22.0"
chrono = "0.4.40"
crc32fast = "1.4.2"
generic-array = "1.2.0"
md-5 = "0.10.6"
parking_lot = "0.12.3"
tokio = "1.44.2"
twofish = "0.7.1"

[profile.release]
strip = true
debug = false
lto = true
codegen-units = 1
opt-level = 'z'
panic = 'abort'
