[package]
name = "haxial"
version = "0.1.0"
edition = "2024"
description = "Common Haxial KDX functionality"

[features]
default = []
net = ["bytes"]

[dependencies]
bytemuck = "1.22.0"
bytes = { version = "1.10.1", optional = true }
cfg-if = "1.0.0"
generic-array = "1.2.0"
md-5 = "0.10.6"
mime_guess = "2.0.5"
#twofish = "0.7.1"
